  EntityPanel.handleException() added, delegates to edit panel
  Configuration.getReportPath() added
  EntityDb.fillReport() generic using wrappers now
  framework.plugins.jasperreports.* added
  Entity.getProperty() now throws exception if the property was not found
  build.xml/.properties added -plugins.jar and related stuff
  Added jminor-plugins.jar to demo run files
  ConnectionPoolMonitor moved back to framework.server.monitor to remove common -> JFreeChart dependency
  EntityComboBoxModel.createForeignKeyFilterComboBoxModel(), returned model selects the item referenced by the selected item
  AbstractFilteredTablePanel.txtSearch, initializeSearchField() added
  AbstractFilteredTableModel.findNextItemIndex() and getSearchCriteria() added
  EntityTableModel overrides above method
  EntityTablePanel.initializeSouthPanel() now adds search field
  SearchFieldHint added
  ALT removed from shortcut key combos
  DocumentAdapter added
  EntityTablePanel overrides initializeSearchField()
  EntityPanel.setupKeyboardActions(), search panel is now toggled instead of simply shown
  PropertyComboBoxModel sets the null value string if property is nullable
  PropertyComboBoxModel.isNullValueItemSelected() renamed to isNullValueSelected()
  Methods now return the linked state instead of the actual state (which could then be modified)
  FilteredComboBoxModel.emptyStringIsNull removed, nullValueString functionality improved
  AbstractFilteredTableModel.findNextItemIndex() renamed to findNextItemCoordinate(), now returns Point
  AbstractFilteredTableModel.getSearchValueAt() added
  EntityTableModel overrides getSearchValueAt()
  AbstractFilteredTablePanel.scrollToCoordinate() added
  Configuration.USE_LOOKUP_FIELD_SEARCH_HINT removed
  EntityLookupField.searchHintEnabled removed
  ValueMap.ToString<T, V>, removed V type parameter
  Plugin api doc generation added to build.xml
  EntityTablePanel.getConfirmDeleteMessages() added